--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -5,7 +5,7 @@
     height: 4rem;
     margin: auto;
     margin-right: 2rem;
-    background-image: url('../../images/blankUserImg.png');
+    background-image: url('../../assets/images/blankUserImg.png');
     background-position: center;
     background-size: cover;
     object-fit: contain;
