--- a/src/components/Landing/Footer/Footer.scss
+++ b/src/components/Landing/Footer/Footer.scss
@@ -65,12 +65,13 @@
   }
 
   &__logo {
-    width: 90%;
+    width: 7.8125rem;
     padding: 1rem;
     display: flex;
     justify-content: flex-start;
     @include tablet {
-      width: 300px;
+      width: 9.375rem;
     }
   }
+
 }
