--- a/src/pages/LoginPage/LoginPage.scss
+++ b/src/pages/LoginPage/LoginPage.scss
@@ -17,11 +17,15 @@
   background-size: cover;
   width: 100%;
   background-image: url("../../assets/background/yellowbackgroundlogin.png");
+  @include desktop {
+    background-image: url("../../assets/background/LoginDesktopBackground.png");
+  }
 }
 .logoMark {
   margin-top: 3rem;
   height: 8rem;
   z-index: 1;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 
 .coffeeChat {
@@ -42,19 +46,19 @@
 .loginForm {
   width: 80%;
   z-index: 1;
-  height: 25%;
+  height: 20%;
   @include tablet {
     width: 50%;
   }
   @include desktop {
-    width: 35%;
+    width: 25%;
   }
 }
 
 .inputLogin {
-  background-color: transparent;
   padding: 1rem;
   padding-bottom: 0%;
+  background-color: transparent;
   margin-bottom: 1rem;
   border: none;
   border-bottom: 1px solid black;
@@ -78,10 +82,10 @@
 }
 
 .loginBtn {
-  margin-bottom: 0.5rem;
+  margin: 0.5rem 0rem;
   background-color: black;
   border-radius: 20px;
-  width: 9rem;
+  width: 45vw;
   color: white;
   font-family: "Gilroy-light", sans-serif;
   font-weight: 100;
@@ -90,6 +94,15 @@
   text-align: -webkit-center;
   position: relative;
   z-index: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  @include tablet {
+    width: 25vw;
+  }
+  @include desktop {
+    width: 25vw;
+  }
 }
 
 .continueWith {
@@ -131,4 +144,7 @@
     position: absolute;
     bottom: -5rem;
   }
+}
+.loginTitle {
+  margin-bottom: 3%;
 }
