--- a/src/pages/NotFoundPage/NotFoundPage.scss
+++ b/src/pages/NotFoundPage/NotFoundPage.scss
@@ -5,6 +5,6 @@
     list-style-type: disc;
     display: flex;
     flex-direction: column;
-    align-items: start;
+    align-items: flex-start;
   }
 }
