--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -118,13 +118,19 @@
     overflow: auto;
   }
 }
-
+.scheduledItem {
+  display: flex;
+  justify-content: space-between;
+  padding: 0px 2%;
+  width: 100%;
+  align-items: center;
+}
 .scheduleList {
   display: flex;
   border-radius: 1.25rem;
   background-color: $mvp-gray;
   padding: 0.7rem;
-
+  margin: 5% 0%;
   width: 100%;
   @include tablet {
     align-items: center;
@@ -150,10 +156,23 @@
   //   margin-right: 1rem;
   font-size: 0.7rem;
   text-align: center;
-  padding: 0.7rem;
+  // padding: 0.7rem;
   //   width: 50%;
   @include tablet {
     // width: 25%;
+  }
+}
+.scheduledNameOnly {
+  background-color: #ff9393;
+  border-radius: 25px;
+  border: 2px solid black;
+  margin-right: 1rem;
+  font-size: 0.7rem;
+  text-align: center;
+  padding: 0.7rem;
+  width: 30%;
+  @include tablet {
+    width: 25%;
   }
 }
 
