--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -1,3 +1,4 @@
+@use "../../styles/partials/mixins" as *;
 .navbar {
   position: fixed;
   display: flex;
@@ -8,23 +9,58 @@
   left: 0;
   width: 100%;
   height: 3.5rem;
-  background: var(--007, #FFF9F4);
-  color: rgba(51, 51, 51, 0.47);
+  background: white;
+  color: black;
   text-align: center;
-  font-feature-settings: 'clig' off, 'liga' off;
+  font-feature-settings: "clig" off, "liga" off;
   font-family: Gilroy-light, sans-serif;
   font-size: 0.8125rem;
   font-weight: 700;
   line-height: 1rem;
   /* 123.077% */
+  @include desktop {
+    top: 0;
+    height: 10%;
+    background: white;
+  }
+}
+.logo {
+  display: none;
+  @include desktop {
+    display: unset;
+    height: 80%;
+  }
 }
 
 .navIcons {
   margin: auto;
-  color: rgba(0, 0, 0, 0.37);
+  color: black;
+  @include desktop {
+    display: none;
+  }
 }
 
 a {
   text-decoration: none;
-  color:rgba(0, 0, 0, 0.37);;
+  color: black;
+}
+.navLinks {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  @include desktop {
+    justify-content: center;
+  }
+}
+.navLinksActive {
+  width: 26%;
+  border-radius: 50px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  background-color: #0099ff6b;
+  @include desktop {
+    width: 5%;
+  }
 }
