--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -18,10 +18,16 @@
   font-weight: 700;
   line-height: 1rem;
   /* 123.077% */
+  @include tablet {
+    height: 7%;
+    background: white;
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25);
+  }
   @include desktop {
     top: 0;
     height: 10%;
     background: white;
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25);
   }
 }
 .logo {
@@ -35,6 +41,10 @@
 .navIcons {
   margin: auto;
   color: black;
+  @include tablet {
+    width: 2rem;
+    max-width: unset;
+  }
   @include desktop {
     display: none;
   }
@@ -49,8 +59,12 @@ a {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+  @include tablet {
+    font-size: 1.2rem;
+  }
   @include desktop {
     justify-content: center;
+    font-size: 1.2rem;
   }
 }
 .navLinksActive {
@@ -60,7 +74,15 @@ a {
   flex-direction: column;
   justify-content: space-around;
   background-color: #0099ff6b;
+  @include tablet {
+    height: 80%;
+    width: 17%;
+    font-size: 1.2rem;
+  }
   @include desktop {
-    width: 5%;
+    width: 7%;
+    height: 50%;
+    justify-content: center;
+    font-size: 1.2rem;
   }
 }
