--- a/src/pages/ProfilePage/ProfilePage.scss
+++ b/src/pages/ProfilePage/ProfilePage.scss
@@ -2,6 +2,47 @@
 @use "../../styles/partials/variables" as *;
 @use "../../styles/partials/global";
 
+
+.logoutBtn{
+  border-radius: 100%;
+  height: 2.2rem;
+  width: 2.2rem;
+  contain: strict;
+  margin-right: 1rem;
+  position: absolute;
+  right: 0;
+  top: 1rem;
+  background-color: black;
+}
+
+.logoutImg {
+  margin: auto;
+  z-index: 1;
+  margin-left: 0.3rem;
+  margin-top: 0.3rem;}
+
+.profileName{
+  font-size: large;
+}
+
+.btnDiv {
+  width: auto;
+  display: flex;
+  justify-content: center;
+}
+
+.editBtn {
+  margin: auto;
+  color: white;
+  background-color: black;
+  border-radius: 1.89325rem;
+  font-family: Gilroy-bold, sans-serif;
+  font-size: 1.2rem;
+  font-style: normal;
+  font-weight: 600;
+  padding: 0.8rem;
+}
+
 .profile {
   &__content {
     @include center-vertically;
@@ -28,6 +69,12 @@
 
   &__description {
     width: 20rem;
+    height: fit-content;
+    margin-top: 2rem;
+    border: solid lightgray;
+    border-radius: 2rem;
+    padding: 1.2rem;
+    
   }
 
   &__tech {
