--- a/src/pages/ConnectionsPage/ConnectionsPage.scss
+++ b/src/pages/ConnectionsPage/ConnectionsPage.scss
@@ -16,46 +16,121 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 3rem 2rem;
+    margin: 2rem 2rem 0rem 2rem;
+    @include tablet {
+      height: 91%;
+    }
+    @include desktop {
+      margin: 5rem 2rem 0rem 2rem;
+    }
   }
 
   &--blue {
     color: #0954b0;
-    width: 100%;
+    width: 87%;
     font-size: 1rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
+    @include tablet {
+      width: 50%;
+      max-width: 328px;
+      font-size: 1.5rem;
+    }
+    @include desktop {
+      width: 20%;
+    }
   }
 
   &--red {
     color: $mvp-red;
     margin-left: 50%;
   }
-
+  &__button {
+    width: 40%;
+    color: white;
+    background-color: black;
+    font-size: 0.8rem;
+    padding: 0.6rem 0.4rem;
+    margin: 1rem 0.5rem;
+    border-radius: 50px;
+    @include tablet {
+      width: 29%;
+      color: white;
+      background-color: black;
+      font-size: 1.2rem;
+      padding: 1rem 0.4rem;
+    }
+    @include desktop {
+      width: 13%;
+    }
+    &-container {
+      display: flex;
+      width: 100%;
+      justify-content: center;
+      @include tablet {
+        margin-top: 2rem;
+      }
+    }
+  }
   &__image {
-    width: 100%;
-    height: 40%;
+    width: 86%;
+    height: 32%;
     background-position: center;
     background-size: contain;
+    margin: 2rem;
     background-repeat: no-repeat;
     background-image: url("../../assets/images/ConnectionsBaseAnimation.svg");
     position: relative;
+    @include tablet {
+      height: 27%;
+      width: 27%;
+      max-width: 247px;
+    }
+    @include desktop {
+      width: 18%;
+      max-width: 330px;
+    }
     &-img-1 {
-      width: 40%;
+      width: 31%;
       position: absolute;
       right: 30%;
       top: 35%;
       animation: circle 6s linear infinite;
+      @include tablet {
+        width: 29%;
+        max-width: 84px;
+        right: 35%;
+        top: 37%;
+      }
+      @include desktop {
+        width: 24%;
+        right: 38%;
+        max-width: 84px;
+        top: 41%;
+      }
     }
+
     &-img-2 {
-      width: 40%;
+      width: 31%;
       position: absolute;
       right: 30%;
       top: 35%;
       animation: circle-2 6s linear infinite;
       animation-delay: -3s;
+      @include tablet {
+        width: 29%;
+        right: 35%;
+        max-width: 84px;
+        top: 37%;
+      }
+      @include desktop {
+        width: 24%;
+        right: 38%;
+        max-width: 84px;
+        top: 41%;
+      }
     }
   }
 
@@ -69,6 +144,9 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    @include tablet {
+      padding: 2rem 3rem;
+    }
   }
   &__filters {
     width: 100%;
@@ -79,14 +157,22 @@
   &__titles {
     color: $mvp-red;
     margin: 0.3rem 0rem;
+    @include tablet {
+      font-size: 1.5rem;
+      margin: 1rem 0rem;
+    }
   }
   &__option-2 {
     background-color: rgba(0, 153, 255, 0.4);
-
+    display: flex;
+    align-items: center;
     padding: 0.3rem 0.4rem;
     border-radius: 50px;
     color: black;
     font-size: 0.7rem;
+    @include tablet {
+      font-size: 1.1rem;
+    }
   }
   &__option-1 {
     background: rgba(9, 84, 176, 0.5);
@@ -94,6 +180,11 @@
     border-radius: 50px;
     color: black;
     font-size: 0.7rem;
+    display: flex;
+    align-items: center;
+    @include tablet {
+      font-size: 1.1rem;
+    }
   }
   &__option-3 {
     padding: 0.3rem 0.4rem;
@@ -101,14 +192,23 @@
     color: black;
     background: rgba(255, 112, 112, 0.5);
     font-size: 0.7rem;
+    display: flex;
+    align-items: center;
+    @include tablet {
+      font-size: 1.1rem;
+    }
   }
   &__option-4 {
-    padding: 0.3rem 0.4rem;
+    padding: 0.3rem 1.4rem;
     border-radius: 50px;
     color: black;
     background: rgba(255, 210, 47, 0.5);
-
+    display: flex;
+    align-items: center;
     font-size: 0.7rem;
+    @include tablet {
+      font-size: 1.1rem;
+    }
   }
   &__options {
     width: 100%;
@@ -133,4 +233,7 @@
   100% {
     transform: rotate(360deg) translate(-100px) rotate(-360deg);
   }
+}
+.selected {
+  border: 2px solid black;
 }
