--- a/src/pages/ConnectionsPage/ConnectionsPage.scss
+++ b/src/pages/ConnectionsPage/ConnectionsPage.scss
@@ -5,11 +5,14 @@
 .connections {
   width: 100%;
   height: 135vh;
-  background-image: url("../../assets/background/ConnectionsMobileBackground.png");
+
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   overflow: hidden;
+  @include desktop {
+    background-image: none;
+  }
   &__container {
     display: flex;
     height: 85%;
@@ -21,7 +24,7 @@
       height: 91%;
     }
     @include desktop {
-      margin: 5rem 2rem 0rem 2rem;
+      margin: 8rem 2rem 0rem 2rem;
     }
   }
 
@@ -39,7 +42,7 @@
       font-size: 1.5rem;
     }
     @include desktop {
-      width: 20%;
+      width: 32%;
     }
   }
 
@@ -85,11 +88,11 @@
     position: relative;
     @include tablet {
       height: 27%;
-      width: 27%;
-      max-width: 247px;
+      width: 47%;
+      max-width: 360px;
     }
     @include desktop {
-      width: 18%;
+      width: 30%;
       max-width: 330px;
     }
     &-img-1 {
