--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -159,7 +159,7 @@
 
 .connections {
   border-radius: 25px;
-  background-color: aliceblue;
+  background-color: white;
   width: 32%;
   text-align: center;
 }
