--- a/src/pages/ProfilePage/ProfilePage.scss
+++ b/src/pages/ProfilePage/ProfilePage.scss
@@ -3,7 +3,7 @@
 @use "../../styles/partials/global";
 
 
-.logoutBtn{
+.logoutBtn {
   border-radius: 100%;
   height: 2.2rem;
   width: 2.2rem;
@@ -19,9 +19,10 @@
   margin: auto;
   z-index: 1;
   margin-left: 0.3rem;
-  margin-top: 0.3rem;}
+  margin-top: 0.3rem;
+}
 
-.profileName{
+.profileName {
   font-size: large;
 }
 
@@ -52,6 +53,7 @@
     border: 0.1rem solid black;
     border-radius: 0.5rem;
     width: 20rem;
+
     &--container {
       display: flex;
       flex-direction: row;
@@ -62,36 +64,62 @@
   }
 
   &__icon {
-    width: 2rem;
-    height: 2rem;
+    width: 1.5rem;
+    height: 1.5rem;
     margin: 0.5rem;
   }
 
   &__description {
-    width: 20rem;
+    width: 23rem;
     height: fit-content;
     margin-top: 2rem;
-    border: solid lightgray;
-    border-radius: 2rem;
     padding: 1.2rem;
-    
+    border-radius: 1.9375rem;
+    background: #F7F7F7;
+    box-shadow: 0px 0px 9px 0px rgba(0, 0, 0, 0.25);
+  }
+
+  &_bio {
+    font-family: "Gilroy", sans-serif;
+    line-height: 1.4rem;
+    color: #000;
+    font-feature-settings: 'clig' off, 'liga' off;
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 300;
+    line-height: 1.5625rem;
+    letter-spacing: 0.0625rem;
   }
 
   &__tech {
-    padding: 1rem 2rem;
-    margin: 1rem;
-    background-color: lightgrey;
-    border-radius: 2rem;
+    padding: 0.2rem 1rem;
+    border-radius: 1.31581rem;
+    background: #799DCA;
+    color: #000;
+    font-feature-settings: 'clig' off, 'liga' off;
+    font-family: Gilroy;
+    font-size: 0.625rem;
+    font-style: normal;
+    font-weight: 300;
+    line-height: 1.625rem;
+
     &--row {
+      width: 100%;
       display: flex;
       flex-direction: row;
+      overflow-wrap: normal;
+      margin-bottom: 0.2rem;
+      align-items: baseline;
+      justify-content: space-around;
     }
+
     &--container {
-      padding: 1rem;
+      display: flex;
+      flex-wrap: wrap;
     }
   }
 
-  &__button{
+  &__button {
     margin: 1rem;
     background-color: black;
     color: white;
