--- a/src/pages/EditProfile/EditProfile.scss
+++ b/src/pages/EditProfile/EditProfile.scss
@@ -1,6 +1,6 @@
 .editProfileBody {
-    height: 120vh;
-    contain: strict;
+    height: auto;
+    contain: content;
 }
 
 .picDiv {
@@ -32,9 +32,17 @@
     background: #F7F7F7;
     box-shadow: 0px 0px 9px 0px rgba(0, 0, 0, 0.25);
     margin: auto;
+    margin-bottom: 5rem;
     padding: 1.5rem;
     z-index: 1;
 }
+
+@media screen and (max-width: 300px) {
+    .editProfileBody {
+      width: fit-content;
+    }
+  }
+
 
 .inputDivs {
     position: relative;
