--- a/src/pages/ProfilePage/ProfilePage.scss
+++ b/src/pages/ProfilePage/ProfilePage.scss
@@ -23,7 +23,7 @@
 }
 
 .profileName {
-  font-size: large;
+  font-size: x-large;
 }
 
 .btnDiv {
@@ -46,21 +46,29 @@
 
 .profile {
   &__content {
-    @include center-vertically;
+    contain: content;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+    align-items: center;
   }
 
   &__card {
-    border: 0.1rem solid black;
     border-radius: 0.5rem;
-    width: 20rem;
+    width: 23rem;
 
     &--container {
       display: flex;
       flex-direction: row;
-      justify-content: center;
+      justify-content: left;
       align-items: center;
-      margin: 1rem;
     }
+  }
+
+  &__location {
+    margin-bottom: 1rem;
+    text-transform: capitalize;
   }
 
   &__icon {
@@ -70,13 +78,15 @@
   }
 
   &__description {
+    z-index: 2;
     width: 23rem;
     height: fit-content;
-    margin-top: 2rem;
+    margin-top: 1rem;
     padding: 1.2rem;
     border-radius: 1.9375rem;
     background: #F7F7F7;
     box-shadow: 0px 0px 9px 0px rgba(0, 0, 0, 0.25);
+    margin-bottom: 8rem;
   }
 
   &_bio {
@@ -108,7 +118,7 @@
       display: flex;
       flex-direction: row;
       overflow-wrap: normal;
-      margin-bottom: 0.2rem;
+      margin-bottom: 0.5rem;
       align-items: baseline;
       justify-content: space-around;
     }
@@ -117,6 +127,25 @@
       display: flex;
       flex-wrap: wrap;
     }
+  }
+
+  &__backGroundLower {
+    border-radius: 2.8125rem 2.8125rem 0rem 0rem;
+    background: var(--007, #FFF9F4);
+    width: 25.5rem;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+  }
+
+  &__backGroundCircle {
+    position: absolute;
+    top: 0;
+    border-radius: 35.87038rem;
+    background: #E7F0FF;
+    width: 35.87038rem;
+    height: 33.58869rem;
+    z-index: -1;
   }
 
   &__button {
