--- a/src/components/Landing/Partners/Partners.scss
+++ b/src/components/Landing/Partners/Partners.scss
@@ -4,11 +4,10 @@
 
 .partners {
     width: 100%;
-    height: 45rem;
+    height: auto;
 
     @include desktop {
-        max-width: 1280rem;
-        height: 100vh;
+        max-width: 80rem;
         margin: auto;
       }
       
