--- a/src/components/Landing/Partners/Partners.scss
+++ b/src/components/Landing/Partners/Partners.scss
@@ -7,7 +7,7 @@
     height: 45rem;
 
     @include desktop {
-        max-width: 1280rem;
+        max-width: 80rem;
         height: 100vh;
         margin: auto;
       }
@@ -16,13 +16,24 @@
     display: flex;
     flex-direction: column;
     padding: 1rem;
-
+    
     @include tablet {
       display: flex;
       flex-direction: row;
       align-items: center;
       justify-content: center;
       padding: 1.5rem;
+      &:before {
+        content: "";
+        position: absolute;
+        width: 80rem;
+        height: 23rem;
+        margin-bottom: -12rem;
+        border-radius: 3rem 0 0 3rem;
+        background-color: $mvp-red;
+        opacity: 50%;
+        z-index: -1;
+      }
     }
     &--header {
       display: flex;
@@ -46,18 +57,6 @@
         display: flex;
         flex-direction: row;
         padding: 3rem;
-        &:before {
-          content: "";
-          position: absolute;
-          left:0;
-          width: 80rem;
-          height: 23rem;
-          margin-top: -2rem;
-          border-radius: 3rem 0 0 3rem;
-          background-color: $mvp-red;
-          opacity: 50%;
-          z-index: -1;
-        }
       }
     }
   }
