--- a/src/components/Landing/Testimonials/Testimonials.scss
+++ b/src/components/Landing/Testimonials/Testimonials.scss
@@ -4,14 +4,18 @@
 
 .testimonials {
   width: 100%;
-  height: 100vh;
+  height: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 1.5rem;
+
+  @include tablet {
+    padding: 2rem;
+  }
 
   @include desktop {
     max-width: 80rem;
-    height: auto;
     margin: auto;
   }
 
@@ -22,48 +26,60 @@
   }
 
   &__carousel {
-   display: flex;
-   align-items: center;
-   justify-content: center;
-width: 80rem;
-}
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 30rem;
+    background-color: $mvp-cream;
+    border-radius: 5rem;
+    border: 0.1rem solid $mvp-black;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  }
+  &__container {
+    display: flex;
+    align-items: center;
+    padding: 1rem;
 
-&__item {
-  width: 30rem; 
-  height: 10rem; 
-  margin-right: 1rem; 
-
-  &.preview {
-    opacity: 0.5;
+    &--title {
+      padding: 1rem;
+    }
   }
 
-  @include desktop {
-    width: 60rem; 
-    height: 20rem; 
-    margin-right: 2rem; 
+  &__item {
+    width: 30rem;
+    height: 10rem;
+    margin-right: 1rem;
+
+    @include desktop {
+      width: 60rem;
+      height: 20rem;
+      margin-right: 2rem;
+    }
   }
-}
- &__buttons {
-   display: flex;
-   justify-content: center;
-   gap: 1rem;
- }
+  &__buttons {
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
+    padding: 1rem;
+  }
 
- &__dot {
-   width: 0.1rem;
-   height: 0.1rem;
-   border-radius: 50%;
-   background-color: #ccc;
-   border: none;
-   cursor: pointer;
-   transition: background-color 0.3s;
+  &__dot {
+    width: 0.1rem;
+    height: 0.1rem;
+    border-radius: 50%;
+    background-color: #ccc;
+    border: none;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    padding: 1rem;
 
-   &.active {
-     background-color: $mvp-red;
-   }
+    &.active {
+      background-color: $mvp-red;
+    }
 
-   &:hover {
-     background-color: #aaaaaa;
-   }
- }
+    &:hover {
+      background-color: #aaaaaa;
+    }
+  }
 }
