Finished mobile styling for schedulingPage with validation, and working confirmation modal.

--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -7,6 +7,8 @@ $desktop: 1024px;
 // Primary Colors
 $mvp-black: #000000; // Borders and Text
 $mvp-light-blue: #0099ff; // Text and Interactive Elements
+$mvp-lighter-blue: #60bdfb; // Blue accent on Scheduling Page
+$mvp-lighter-blue-hover: #e3f4ff; // Even lighter blue for hover effects
 $mvp-white: #ffffff; // Universal White for text and inputs
 $mvp-yellow: #ffd22f; // Backgrounds and Icons
 
