--- a/src/pages/ProfilePage/ProfilePage.scss
+++ b/src/pages/ProfilePage/ProfilePage.scss
@@ -80,7 +80,7 @@
   &__description {
     z-index: 2;
     width: 23rem;
-    height: fit-content;
+    height: 18rem;
     margin-top: 1rem;
     padding: 1.2rem;
     border-radius: 1.9375rem;
