--- a/src/components/Connecting/Connecting.scss
+++ b/src/components/Connecting/Connecting.scss
@@ -21,8 +21,8 @@
     width: 100%;
     height: 40%;
     flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
+    // align-items: center;
+    // justify-content: flex-start;
     @include tablet {
       height: 63%;
     }
@@ -52,10 +52,17 @@
     }
   }
 
+  &__back-arrow {
+    height: 3.125rem;
+    width: 3.125rem;
+    margin-left: -0.625rem;
+  }
+
   &--blue {
     color: #0954b0;
     width: 87%;
-    font-size: 1rem;
+    // font-size: 1rem;
+    font-size: 1.5rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
