--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -1,5 +1,109 @@
 @use "../../styles/partials/variables" as *;
 @use "../../styles/partials/mixins" as *;
+
+
+
+.home {
+  background-color: white;
+  height: 100vh;
+  background-image: url(../../assets/images/HomeBackgroundTablet.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  padding-top: 15%;
+
+  @include tablet {
+    padding-top: 16%;
+    background-image: url(../../assets/images/HomeBackgroundTablet.svg);
+  }
+
+  @include desktop {
+    padding-top: 9%;
+    background-image: url(../../assets/images/HomeBackground.svg);
+  }
+}
+
+//galaxy fold
+@media screen and (max-width: 300px) {
+    
+  .home {
+    height: 120vh;
+    width: max-content;
+  }
+}
+
+//Iphone SE
+@media screen and (max-height: 700px) {
+    
+  .home {
+    padding-top: 4%;
+  }
+}
+
+
+
+.WelcomeTitle {
+  color: #000;
+  font-feature-settings: 'clig' off, 'liga' off;
+  font-family: Corben-bold;
+  font-size: 1.6875rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 2.5rem;
+  letter-spacing: 0.03125rem;
+}
+
+.homeSection {
+  border-radius: 0.3125rem;
+  border-top: 1px solid #000;
+  border-right: 3px solid #000;
+  border-bottom: 3px solid #000;
+  border-left: 1px solid #000;
+  background: #F7F7F7;
+  padding: 1rem;
+  width: 22.4375rem;
+  height: 11rem;
+  flex-shrink: 0;
+  margin: auto;
+  margin-bottom: 1.25rem;
+}
+
+.homeSubHeader {
+  color: #000;
+  font-feature-settings: 'clig' off, 'liga' off;
+  font-family: Corben-bold;
+  font-size: 1.3125rem;
+  font-style: normal;
+  font-weight: 900;
+  line-height: 2.5rem;
+  letter-spacing: 0.03125rem;
+}
+
+.connectionsBtn {
+  margin: auto;
+  color: #FFF;
+  text-align: center;
+  font-size: 1.25rem;
+  font-style: normal;
+  font-weight: 800;
+  line-height: normal;
+  background-color: #000;
+  display: flex;
+  height: 2.8125rem;
+  padding: 0.625rem 1.25rem;
+  justify-content: center;
+  align-items: center;
+  gap: 0.25rem;
+  flex-shrink: 0;
+}
+
+.homeList {
+  border-radius: 0.3125rem;
+  background: #FFF;
+  box-shadow: 0px 7px 9px 0px rgba(0, 0, 0, 0.25);
+  padding: 1rem;
+}
+
 .accountBtn {
   border-radius: 50%;
   width: 5rem;
@@ -10,11 +114,13 @@
   background-size: cover;
 
   text-align: center;
+
   @include tablet {
     margin-left: 5%;
     width: 10vw;
     height: 10vw;
   }
+
   @include desktop {
     margin-left: 50%;
     width: 7vw;
@@ -25,10 +131,12 @@
 .WelcomeTitle {
   padding-left: 1.2rem;
   font-size: 1.5rem;
+
   @include tablet {
     padding-left: 2.5rem;
     font-size: 1.9rem;
   }
+
   @include desktop {
     padding-left: 5%;
   }
@@ -44,10 +152,12 @@
   align-items: center;
   justify-content: space-between;
   margin-bottom: 10%;
+
   @include tablet {
     justify-content: flex-start;
     margin-bottom: 5%;
   }
+
   @include desktop {
     justify-content: flex-start;
     margin-bottom: 3%;
@@ -68,6 +178,7 @@
   flex-direction: column;
   justify-content: space-evenly;
   overflow: auto;
+
   @include tablet {
     margin: 0px;
     margin-top: 5%;
@@ -75,6 +186,7 @@
     width: 70%;
     gap: 15px;
   }
+
   @include desktop {
     border-radius: 25px;
     width: 55%;
@@ -87,6 +199,7 @@
     overflow: auto;
   }
 }
+
 .scheduledItem {
   display: flex;
   justify-content: space-between;
@@ -94,6 +207,7 @@
   width: 100%;
   align-items: center;
 }
+
 .scheduleList {
   display: flex;
   border-radius: 1.25rem;
@@ -102,38 +216,38 @@
   padding: 0.7rem;
 
   width: 100%;
+
   @include tablet {
     align-items: center;
     justify-content: space-between;
     padding: 1rem 2rem;
   }
 }
+
 .scheduleTitle {
   text-align: left;
   padding-left: 7%;
+
   @include tablet {
     padding-left: 2.5rem;
     font-size: 1.5rem;
   }
+
   @include desktop {
     padding-left: 6%;
   }
 }
+
 .scheduledName {
-  //   background-color: #ff9393;
-  //   border-radius: 25px;
-  //   border: 2px solid black;
-  //   margin-right: 1rem;
   font-size: 0.7rem;
   color: black;
   text-align: center;
-  // padding: 0.7rem;
-  //   width: 50%;
+
   @include tablet {
-    // width: 25%;
     font-size: 0.9rem;
   }
 }
+
 .scheduledNameOnly {
   background-color: #ff9393;
   border-radius: 25px;
@@ -144,17 +258,11 @@
   text-align: center;
   padding: 0.7rem;
   width: 30%;
+
   @include tablet {
     width: 25%;
     font-size: 1.1rem;
   }
-}
-
-.lowerDiv {
-  display: flex;
-  justify-content: space-around;
-  margin-top: 3rem;
-  height: 4rem;
 }
 
 .connections {
@@ -164,26 +272,11 @@
   text-align: center;
 }
 
-.home {
-  background-color: white;
-  height: 100vh;
-  background-image: url(../../assets/images/HomeBackgroundTablet.svg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  padding-top: 15%;
-  @include tablet {
-    padding-top: 16%;
-    background-image: url(../../assets/images/HomeBackgroundTablet.svg);
-  }
-  @include desktop {
-    padding-top: 9%;
-    background-image: url(../../assets/images/HomeBackground.svg);
-  }
-}
+
 .ScheduleDivTitle {
   margin-bottom: 1rem;
 }
+
 .scheduledInfo {
   display: flex;
   flex-direction: column;
@@ -200,6 +293,7 @@
     align-content: center;
     gap: 10px;
   }
+
   @include desktop {
     max-width: 50%;
     display: flex;
@@ -211,27 +305,25 @@
     gap: 20px;
   }
 }
+
 .scheduleList:hover {
   background: rgb(233, 233, 233);
 }
+
 .scheduledNextConnection {
   margin-left: 7%;
   margin-top: 5%;
   font-size: 1rem;
   width: 50%;
+
   @include tablet {
     margin-left: 6%;
     font-size: 1.5rem;
   }
+
   @include tablet {
     margin-left: 6%;
     font-size: 1.5rem;
   }
 }
-.UrlAddress {
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  flex-shrink: 1;
-  overflow: hidden;
-  max-width: 118px;
-}
+
