--- a/src/components/Connecting/Connecting.scss
+++ b/src/components/Connecting/Connecting.scss
@@ -24,6 +24,7 @@
     flex-direction: column;
     // align-items: center;
     // justify-content: flex-start;
+    justify-content: center;
     @include tablet {
       height: 63%;
     }
@@ -51,12 +52,6 @@
       height: 60%;
       flex-direction: row;
     }
-  }
-
-  &__back-arrow {
-    height: 3.125rem;
-    width: 3.125rem;
-    margin-left: -0.625rem;
   }
 
   &--blue {
