--- a/src/components/Connecting/Connecting.scss
+++ b/src/components/Connecting/Connecting.scss
@@ -62,7 +62,7 @@
     color: #0954b0;
     width: 87%;
     // font-size: 1rem;
-    font-size: 1.5rem;
+    font-size: 1.6rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -81,13 +81,18 @@
     color: $mvp-red;
     margin-left: 50%;
   }
+
+  &__button-container {
+    margin-top: 0.5rem;
+  }
+
   &__button {
     // width: 40%;
     width: 50%;
     color: white;
     background-color: black;
     // font-size: 0.8rem;
-    font-size: 1rem;
+    font-size: 1.1rem;
     font-weight: 700;
     padding: 0.6rem 0.4rem;
     margin: 1rem 0.5rem;
@@ -237,7 +242,7 @@
     border-radius: 50px;
     color: black;
     // font-size: 0.6rem;
-    font-size: 0.7rem;
+    font-size: 0.9rem;
     @include tablet {
       font-size: 1.1rem;
     }
@@ -248,7 +253,7 @@
     border-radius: 50px;
     color: black;
     // font-size: 0.6rem;
-    font-size: 0.7rem;
+    font-size: 0.9rem;
     display: flex;
     align-items: center;
     @include tablet {
@@ -261,7 +266,7 @@
     color: black;
     background: rgba(255, 112, 112, 0.5);
     // font-size: 0.6rem;
-    font-size: 0.7rem;
+    font-size: 0.9rem;
     display: flex;
     align-items: center;
     @include tablet {
@@ -276,7 +281,7 @@
     display: flex;
     align-items: center;
     // font-size: 0.6rem;
-    font-size: 0.7rem;
+    font-size: 0.9rem;
     @include tablet {
       font-size: 1.1rem;
     }
