Adjust margins and font size

--- a/src/components/ConnectionOption/ConnectionOption.scss
+++ b/src/components/ConnectionOption/ConnectionOption.scss
@@ -23,7 +23,8 @@
 
   &__header {
     margin-top: -1.563rem;
-    margin-bottom: 0.938rem;
+    margin-bottom: 0.5rem;
+    font-size: 1.6rem;
   }
 
   &__profile-pic {
@@ -31,10 +32,12 @@
     border-radius: 100%;
     height: 9.25rem;
     width: 9.25rem;
+    margin-left: 25%;
   }
 
   &__profile-name {
-    padding-left: 1rem;
+    // padding-left: 1rem;
+    font-size: 2rem;
   }
 
   &__image img {
@@ -53,6 +56,15 @@
     display: flex;
     align-items: center;
   }
+
+  &__reviews-icon {
+    margin-left: 35%;
+  }
+
+  &__info {
+    text-wrap: nowrap;
+  }
+
   &__outer-box {
     height: 70%;
     width: 100%;
