--- a/src/components/ConnectionOption/ConnectionOption.scss
+++ b/src/components/ConnectionOption/ConnectionOption.scss
@@ -11,7 +11,8 @@
     // width: 100%;
     width: 90%;
     // margin: 3rem;
-    margin: 2.5rem 1rem;
+    // margin: 2.5rem 1rem;
+    margin: 2.5rem 0rem 4rem;
     @include desktop {
       margin-top: 8rem;
     }
