--- a/src/pages/ConnectionsPage/ConnectionsPage.scss
+++ b/src/pages/ConnectionsPage/ConnectionsPage.scss
@@ -57,7 +57,7 @@
     font-size: 0.8rem;
     padding: 0.6rem 0.4rem;
     margin: 1rem 0.5rem;
-    border-radius: 50px;
+    // border-radius: 50px;
     @include tablet {
       width: 29%;
       color: white;
@@ -170,7 +170,7 @@
     display: flex;
     align-items: center;
     padding: 0.3rem 0.4rem;
-    border-radius: 50px;
+    // border-radius: 50px;
     color: black;
     font-size: 0.7rem;
     @include tablet {
@@ -180,7 +180,7 @@
   &__option-1 {
     background: rgba(9, 84, 176, 0.5);
     padding: 0.3rem 0.4rem;
-    border-radius: 50px;
+    // border-radius: 50px;
     color: black;
     font-size: 0.7rem;
     display: flex;
@@ -191,7 +191,7 @@
   }
   &__option-3 {
     padding: 0.3rem 0.4rem;
-    border-radius: 50px;
+    // border-radius: 50px;
     color: black;
     background: rgba(255, 112, 112, 0.5);
     font-size: 0.7rem;
@@ -203,7 +203,7 @@
   }
   &__option-4 {
     padding: 0.3rem 1.4rem;
-    border-radius: 50px;
+    // border-radius: 50px;
     color: black;
     background: rgba(255, 210, 47, 0.5);
     display: flex;
