tab switching function

--- a/src/pages/Bookings/Bookings.scss
+++ b/src/pages/Bookings/Bookings.scss
@@ -18,6 +18,23 @@
     flex-shrink: 0;
 }
 
+@mixin unselected-calendar-subtitles {
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    font-feature-settings: 'clig' off, 'liga' off;
+    font-family: Corben;
+    font-size: 1.3125rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 2.5rem;
+    letter-spacing: 0.03125rem;
+    width: 11.9375rem;
+    height: 3.0625rem;
+    flex-shrink: 0;
+}
+
+
 .backArrow {
     position: absolute;
 }
@@ -52,8 +69,10 @@
 }
 
 
-.upcomingBooking {
-    margin-top: 1.5rem;
+.bookings {
+    margin-top: 0.5rem;
+    margin-left: auto;
+    margin-right: auto;
     padding-top: 1.5rem;
     padding-left: 1.8rem;
     border-radius: 0.3125rem;
