--- a/src/routes/WelcomePage/WelcomeNavBar.scss
+++ b/src/routes/WelcomePage/WelcomeNavBar.scss
@@ -56,6 +56,23 @@ div {
     flex-direction: column;
 }
 
+h2 {
+    font-size: 1rem;
+}
+
+.sign {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    padding: 1rem;
+}
+
+.sign-btn {
+    border-width: 3px;
+    border-color: #000;
+    background-color: #FFF;
+}
+
 @media only screen and (max-width: 1024px) {
     header .nav-btn {
         visibility: visible;
@@ -91,4 +108,9 @@ div {
     nav a {
         font-size: 1.5rem;
     }
+
+    .sign {
+        display: none;
+    }
+
 }
