--- a/src/routes/ConnectionsPage/ConnectionsPage.scss
+++ b/src/routes/ConnectionsPage/ConnectionsPage.scss
@@ -5,7 +5,7 @@
 .connections {
   width: 100%;
   height: 135vh;
-
+  background-image: url(../../assets/background/ConnectionsMobileBackground.svg);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
