--- a/src/routes/ConnectionsPage/ConnectionsPage.scss
+++ b/src/routes/ConnectionsPage/ConnectionsPage.scss
@@ -5,7 +5,7 @@
 .connections {
   width: 100%;
   height: 135vh;
-  background-image: url(../../assets/background/ConnectionsMobileBackground.svg);
+  background-color: $mvp-cream;
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -166,22 +166,20 @@
     }
   }
   &__option-2 {
-    background-color: rgba(0, 153, 255, 0.4);
     display: flex;
     align-items: center;
     padding: 0.3rem 0.4rem;
-    // border-radius: 50px;
     color: black;
+    border: 2px solid black;
     font-size: 0.7rem;
     @include tablet {
       font-size: 1.1rem;
     }
   }
   &__option-1 {
-    background: rgba(9, 84, 176, 0.5);
     padding: 0.3rem 0.4rem;
-    // border-radius: 50px;
     color: black;
+    border: 2px solid black;
     font-size: 0.7rem;
     display: flex;
     align-items: center;
@@ -191,9 +189,8 @@
   }
   &__option-3 {
     padding: 0.3rem 0.4rem;
-    // border-radius: 50px;
     color: black;
-    background: rgba(255, 112, 112, 0.5);
+    border: 2px solid black;
     font-size: 0.7rem;
     display: flex;
     align-items: center;
@@ -203,9 +200,8 @@
   }
   &__option-4 {
     padding: 0.3rem 1.4rem;
-    // border-radius: 50px;
     color: black;
-    background: rgba(255, 210, 47, 0.5);
+    border: 2px solid black;
     display: flex;
     align-items: center;
     font-size: 0.7rem;
@@ -238,5 +234,6 @@
   }
 }
 .selected {
-  border: 2px solid black;
+  background-color: $mvp-light-blue;
+  color: $mvp-white;
 }
