Adjust text color

--- a/src/components/Connecting/Connecting.scss
+++ b/src/components/Connecting/Connecting.scss
@@ -219,7 +219,7 @@
     align-items: flex-start;
   }
   &__titles {
-    color: $mvp-red;
+    color: $mvp-black;
     font-size: 1.3rem;
     margin: 0.3rem 0rem;
     @include tablet {
