--- a/src/routes/ConnectionsPage/ConnectionsPage.scss
+++ b/src/routes/ConnectionsPage/ConnectionsPage.scss
@@ -158,7 +158,7 @@
     align-items: flex-start;
   }
   &__titles {
-    color: $mvp-red;
+    color: $mvp-black;
     margin: 0.3rem 0rem;
     @include tablet {
       font-size: 1.5rem;
