--- a/src/components/Connecting/Connecting.scss
+++ b/src/components/Connecting/Connecting.scss
@@ -37,7 +37,8 @@
   }
   &__container {
     display: flex;
-    height: 85%;
+    height: 95%;
+    width: 90%;
     flex-direction: column;
     justify-content: flex-start;
     gap: 10px;
@@ -59,13 +60,16 @@
     display: flex;
   }
 
+  &__upper-container {
+    display: flex;
+    justify-content: flex-start;
+    position: relative;
+  }
+
   &--upper {
     width: 87%;
-    font-size: 1.6rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
+    font-size: 1.7rem;
+    text-align: left;
     @include tablet {
       width: 50%;
       max-width: 328px;
@@ -77,7 +81,18 @@
   }
 
   &--lower {
-    margin-left: 50%;
+    width: 87%;
+    font-size: 1.7rem;
+    margin: -1rem 0px 0px 2.5rem;
+    text-align: right ;
+  }
+
+  &__spiral-arrow {
+    width: 5.5rem;
+    height: 7rem;
+    position: absolute;
+    margin-top: -3.5rem;
+    margin-left: 75%;
   }
 
   &__button-container {
@@ -92,7 +107,6 @@
     font-weight: 700;
     padding: 0.6rem 0.4rem;
     margin: 1rem 0.5rem;
-    // border-radius: 50px;
     @include tablet {
       width: 29%;
       color: white;
@@ -194,10 +208,10 @@
     }
   }
   &__box {
-    padding: 0 20px 20px;
+    padding: 0 20px 0;
     height: 95%;
-
-    border-radius: 15px;
+    margin-top: 5px;
+    border-radius: 5px;
     color: grey; /* Set your desired text color */
     background-color: $mvp-white;
     box-shadow: 0px 0px 9px 0px rgba(0, 0, 0, 0.25);
