--- a/src/components/Connecting/Connecting.scss
+++ b/src/components/Connecting/Connecting.scss
@@ -100,10 +100,11 @@
   }
 
   &__button {
-    width: 50%;
+    width: 10.75rem;
+    height: 2.813rem;
     color: white;
     background-color: black;
-    font-size: 1rem;
+    font-size: 1.25rem;
     font-weight: 700;
     padding: 0.6rem 0.4rem;
     margin: 1rem 0.5rem;
