--- a/src/components/Connecting/Connecting.scss
+++ b/src/components/Connecting/Connecting.scss
@@ -215,6 +215,8 @@
     border-radius: 5px;
     color: grey; /* Set your desired text color */
     background-color: $mvp-white;
+    border: solid;
+    border-color: $mvp-black;
     box-shadow: 0px 0px 9px 0px rgba(0, 0, 0, 0.25);
     display: flex;
     flex-direction: column;
