--- a/src/components/Connecting/Connecting.scss
+++ b/src/components/Connecting/Connecting.scss
@@ -217,7 +217,7 @@
     background-color: $mvp-white;
     border: solid;
     border-color: $mvp-black;
-    box-shadow: 0px 0px 9px 0px rgba(0, 0, 0, 0.25);
+    box-shadow: 2px 2px $mvp-black;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
