--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -2,13 +2,10 @@
 .navbar {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
-  margin-bottom: auto;
-  bottom: 0;
-  left: 0;
   width: 100%;
-  height: 3.5rem;
+  padding: 1rem;
   background: white;
   color: black;
   text-align: center;
