--- a/src/routes/HomePage/HomePage.scss
+++ b/src/routes/HomePage/HomePage.scss
@@ -73,21 +73,11 @@
 }
 
 .connectionsBtn {
-  margin: auto;
   color: #FFF;
-  text-align: center;
   font-size: 1.25rem;
-  font-style: normal;
   font-weight: 800;
-  line-height: normal;
   background-color: #000;
-  display: flex;
-  height: 2.8125rem;
-  padding: 0.625rem 1.25rem;
-  justify-content: center;
-  align-items: center;
-  gap: 0.25rem;
-  flex-shrink: 0;
+  margin: 4rem;
 }
 
 .homeList {
