delete no need elements for navbar and center connection btn w/o margin

--- a/src/routes/HomePage/HomePage.scss
+++ b/src/routes/HomePage/HomePage.scss
@@ -77,7 +77,8 @@
   font-size: 1.25rem;
   font-weight: 800;
   background-color: #000;
-  margin: 4rem;
+  width: 80%;
+  align-self: center;
 }
 
 .homeList {
