add padding for navbar and gap for home

--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -11,6 +11,7 @@
   font-size: 0.8125rem;
   font-weight: 700;
   line-height: 1rem;
+  padding: 1rem;
   /* 123.077% */
   @include tablet {
     height: 7%;
