--- a/src/routes/HomePage/HomePage.scss
+++ b/src/routes/HomePage/HomePage.scss
@@ -8,7 +8,7 @@
   background:bottom url(./home-background.jpg) no-repeat;
   background-repeat: no-repeat;
   background-size: contain;
-
+  gap: 4.3rem; 
   @include tablet {
     padding-top: 16%;
     background-image: url(../../assets/images/HomeBackgroundTablet.svg);
@@ -58,7 +58,8 @@
   border-left: 1px solid #000;
   background: #F7F7F7;
   padding: 1rem;
-  margin: 1.25rem;
+  width: 85%;
+  align-self: center;
 }
 
 .homeSubHeader {
@@ -135,7 +136,6 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  margin-bottom: 10%;
 
   @include tablet {
     justify-content: flex-start;
