--- a/src/components/ConnectionOption/ConnectionOption.scss
+++ b/src/components/ConnectionOption/ConnectionOption.scss
@@ -64,9 +64,11 @@
   &__outer-box {
     height: 70%;
     width: 100%;
-    border-radius: 20px;
+    border-radius: 10px;
     border: solid;
-    border-color: grey;
+    border-color: $mvp-black;
+    background-color: $mvp-white;
+    box-shadow: 2px 2px $mvp-black;
     display: flex;
     flex-direction: column;
     text-align: left;
