--- a/src/components/ConnectionOption/ConnectionOption.scss
+++ b/src/components/ConnectionOption/ConnectionOption.scss
@@ -59,6 +59,7 @@
 
   &__info {
     text-wrap: nowrap;
+    color: $mvp-black;
   }
 
   &__outer-box {
@@ -87,6 +88,7 @@
       &__bio {
         line-height: 1.5rem;
         margin-bottom: 0.3rem;
+        color: $mvp-black;
       }
 
       &__expertise {
