Adust border and background color

--- a/src/components/ConnectionOption/ConnectionOption.scss
+++ b/src/components/ConnectionOption/ConnectionOption.scss
@@ -108,7 +108,8 @@
         &__skill {
           padding: 0.2rem 0.5rem;
           margin-left: 0.5rem;
-          background-color: $mvp-light-blue;
+          background-color: $mvp-yellow;
+          border: solid;
           border-radius: 2rem;
         }
       }
