Adjust font size

--- a/src/components/ConnectionOption/ConnectionOption.scss
+++ b/src/components/ConnectionOption/ConnectionOption.scss
@@ -98,7 +98,7 @@
         padding: 0.5rem 1rem;
         margin-bottom: 0.3rem;
         color: $mvp-black;
-        font-size: small;
+        font-size: 0.7rem;
 
         &__header {
           margin-right: 1rem;
