--- a/src/components/ConnectionOption/ConnectionOption.scss
+++ b/src/components/ConnectionOption/ConnectionOption.scss
@@ -47,6 +47,14 @@
     margin: 0.2rem;
   }
 
+  &__row--name {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 0.2rem;
+  }
+
   &__column {
     width: 50%;
     display: flex;
@@ -122,7 +130,7 @@
   }
 
   &__logo {
-    margin-left: 6.5rem;
+    margin-left: 0.5rem;
   }
 
   &__button {
