--- a/src/routes/WelcomePage/WelcomeNavBar.scss
+++ b/src/routes/WelcomePage/WelcomeNavBar.scss
@@ -71,6 +71,7 @@ h2 {
     border-width: 3px;
     border-color: #000;
     background-color: #FFF;
+    font-weight: 800;
 }
 
 @media only screen and (max-width: 1024px) {
