--- a/src/routes/WelcomePage/WelcomeNavBar.scss
+++ b/src/routes/WelcomePage/WelcomeNavBar.scss
@@ -64,7 +64,6 @@ h2 {
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    padding: 1rem;
 }
 
 .sign-btn {
@@ -72,6 +71,8 @@ h2 {
     border-color: #000;
     background-color: #FFF;
     font-weight: 800;
+    border: 2px solid black;
+    padding: 0.2rem;
 }
 
 @media only screen and (max-width: 1024px) {
