--- a/src/routes/Bookings/Bookings.scss
+++ b/src/routes/Bookings/Bookings.scss
@@ -37,12 +37,12 @@
 .bookingsBody {
     background-color: #FFF9F4;
     height: 100vh;
-    background-image: url(../../assets/images/blueWave.svg);
+    background-image: url(../../assets/images/connectionsBackground.png);
     background-repeat: no-repeat;
     background-position: bottom;
     background-size: contain;
     padding-top: 15%;
-    background-size: 100% 85%;
+    background-size: 100% 97%;
 }
 
 
